syntax = "proto3";

option csharp_namespace = "Bookshop";

message Book { 
    int32 id = 1;
    string title = 2;
    string author = 3;
    int32 page_count = 4;
    double price = 5;
    optional string language = 6;
}

message GetBookRequest { int32 book_id = 1; }
message GetBooksRequest {}

message GetBooksResponse {
    repeated Book books = 1;
}

service Inventory {
    rpc GetBook(GetBookRequest) returns (Book);
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
}





